@@ -371,18 +371,23 @@ static bool set_lang_impl( char const *name ) {
     return false;
   c_lang_set( new_lang_id );
   //
-  // Every time the language changes, re-set di/trigraph mode so the user is
-  // re-warned if di/trigraphs are not supported in the current language.
+  // Every time the language changes, re-set language-specific options so the
+  // user is re-warned if the option is not supported in the current language.
   //
   static set_option_fn_args_t const args = { true, NULL, NULL, NULL };
+  if ( opt_alt_tokens )
+    PJL_IGNORE_RV( set_alt_tokens( &args ) );
   switch ( opt_graph ) {
     case C_GRAPH_NONE:
       break;
     case C_GRAPH_DI:
-      return set_digraphs( &args );
+      PJL_IGNORE_RV( set_digraphs( &args ) );
+      break;
     case C_GRAPH_TRI:
-      return set_trigraphs( &args );
+      PJL_IGNORE_RV( set_trigraphs( &args ) );
+      break;
   } // switch
+
   return true;
 }
 
